tests/fixtures/ring_close/invalid/r4_unreferenced_type.furqan
// Phase 2.9 fixture #8 — R4: unreferenced type declaration (Advisory).
//
// A compound type is declared but no function in the module
// references it (neither as a parameter type nor as a return type).
// The type sits in the module surface unconnected to any executable
// shape — structural dead code, but not necessarily wrong.
//
// Advisory (not Marad): a type may be intentionally declared early
// for future functions to reference, or exported for downstream
// modules to consume. The advisory informs the developer; the
// strict-variant gate does not fire.
//
// Expected: exactly one R4 advisory pointing at the `Summary` type
// span. The suggestion names the two repair paths (reference the
// type from a function signature, or remove the declaration).

bismillah UnreferencedType {
    authority: NAMING_MD
    serves: purpose_hierarchy.truth_over_falsehood
    scope: ingest
    not_scope: nothing_excluded
}

type Document {
    zahir {
        rendered_text: String
    }
    batin {
        raw_bytes: Bytes
    }
}

type Summary {
    zahir {
        headline: String
    }
    batin {
        evidence_spans: SpanList
    }
}

fn ingest() -> Document {
    return Document
}
